--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <form id="loginForm">
         <div>
             <label for="email">Email</label>
-            <input type="email" id="email" placeholder="Example@email.com">
+            <input type="text" id="email" placeholder="Example@email.com">
             <p id="emailError" class="error-message">Make sure email is more than 3 characters and has @ and a .</p>
         </div>
         <div>
